--- a/lisk-dex-electron/public/index.html
+++ b/lisk-dex-electron/public/index.html
@@ -24,6 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      body {
+        margin: none;
+        padding: none;
+      }
+    </style>
     <title>Lisk DEX</title>
   </head>
   <body>
