Use name LDEX UI throughout

--- a/lisk-dex-electron/public/index.html
+++ b/lisk-dex-electron/public/index.html
@@ -30,7 +30,7 @@
         padding: none;
       }
     </style>
-    <title>Lisk DEX</title>
+    <title>LDEX UI</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
